# NapicuEngine

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  config.json  data.json
glad/include/glad/: glad.h
glad/src/: CMakeLists.txt  glad.c
src/: game.c  game.cpp  game.h  main.c  main.cpp  render.c  render.h  window.c  window.h
src/Engine/: Camera.cpp  Camera.h  Component.h  ImGuiLayout.cpp  ImGuiLayout.h  Level.cpp  Level.h  LevelEditor.cpp  LevelEditor.h  Object.cpp  Object.h  Scene.cpp  Scene.h  camera.h  render.c  render.h  window.c  window.cpp  window.h
src/Engine/Components/: Component.h  EditorCamera.cpp  EditorCamera.h  Grid.cpp  Grid.h  MouseEventControls.cpp  MouseEventControls.h  MouseItem.cpp  MouseItem.h  Rigid.h  Sprite.cpp  Sprite.h  SpriteRender.h  TestObject.cpp  TestObject.h
src/Engine/Events/: MouseEvent.cpp  MouseEvent.h
src/Engine/Math/: Matrix4f.cpp  Matrix4f.h  Vector2f.h  Vector3f.h
src/Engine/Object/: Component.h  Object.cpp  Object.h  Transform.cpp  Transform.h
src/Engine/Render/: Batch.cpp  Batch.h  Draw.cpp  Draw.h  Framebuffer.cpp  Framebuffer.h  Line.cpp  Line.h  Render.cpp  Render.h  Select.cpp  Select.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Engine/Scenes/: Level.cpp  Level.h  LevelEditor.cpp  LevelEditor.h
src/Engine/Scenes/Editor/: EditorView.cpp  EditorView.h  Inspector.cpp  Inspector.h
src/Engine/Utils/: Assets.cpp  Assets.h  Config.h  Console.cpp  Console.h  DataManagment.cpp  DataManagment.h  Json.cpp  Json.h  JsonParse.h
src/Engine/math/: Matrix4f.h  Vector2f.c  Vector3f.c  Vector3f.h
src/Engine/shaders/: default.glsl  line.glsl  selectShader.glsl
src/math/: Vector2f.h
